--- a/Website/app/templates/customer/index.html
+++ b/Website/app/templates/customer/index.html
@@ -44,9 +44,6 @@
       {% block appointment_registration %}
 
       {% endblock %}
-      {% block rating %}
-
-      {% endblock %}
       {% block pet_registration %}
 
       {% endblock %}
@@ -59,6 +56,20 @@
       {% block booking_date %}
 
       {% endblock %}
+      {% block pick_pet_review %}
+
+      {% endblock %}
+      {% block review %}
+
+      {% endblock %}
+
+      {% block vaccine_his %}
+
+      {% endblock %}
+      {% block medical_his %}
+
+      {% endblock %}
+
       <script>
         function confirmLogout() {
           return confirm('Bạn có chắc chắn muốn đăng xuất không?')
