--- a/Website/app/templates/customer/vaccine_his.html
+++ b/Website/app/templates/customer/vaccine_his.html
@@ -19,7 +19,7 @@
         {% if vaccines %}
           <div class="content-content-appointment-registration">
             {% for vaccine in vaccines %}
-              <div class="item-content-content-appointment-registration">
+              <div class="item-content-content-appointment-registration" style="margin-bottom: 10px;">
                 <p>{{ vaccine.date }}</p>
                 <p>{{ vaccine.vaccine_type }}</p>
                 <p>{{ vaccine.dosage }}</p>
