--- a/Website/app/templates/customer/profile_customer.html
+++ b/Website/app/templates/customer/profile_customer.html
@@ -40,7 +40,7 @@
     </div>
   </div>
   <div style="display: flex; justify-content: center; width: 100%; height: 100vh;">
-    <div class="layout-right" style="width: 50%; height: 80%; display: flex; justify-content: center; align-items: center;">
+    <div class="layout-right" style="width: 50%; height: 80%; display: flex; align-items: center; place-self:center;">
       {% block content_profile %}
         <div class="container-profile">
           <div class="item-images-profile item-profile">
