--- a/Website/app/templates/customer/index.html
+++ b/Website/app/templates/customer/index.html
@@ -66,10 +66,13 @@
       {% block vaccine_his %}
 
       {% endblock %}
-      {% block medical_his %}
+      {% block update_status_pet %}
 
       {% endblock %}
 
+      {% block home_staff %}
+
+      {% endblock %}
       <script>
         function confirmLogout() {
           return confirm('Bạn có chắc chắn muốn đăng xuất không?')
