--- a/Website/app/templates/customer/review.html
+++ b/Website/app/templates/customer/review.html
@@ -37,7 +37,7 @@
         <h3 class="item-info-pet-bill">Nhận xét tại đây</h3>
         <div class="content-confirm-review-customer">
           <div>
-            <label for="{{ form.form_customer.id_for_label }}" class="item-info-pet-bill">{{ form.form_customer.label }}</label>
+            <label for="{{ form.form_customer.id_for_label }}" class="item-info-pet-bill" style="margin-left: 30px;">{{ form.form_customer.label }}</label>
             {{ form.form_customer }}
           </div>
           <div>
