--- a/Website/app/templates/customer/vaccine_his.html
+++ b/Website/app/templates/customer/vaccine_his.html
@@ -9,7 +9,7 @@
 
     <div class="lay-out-content-appointment-registrantion">
       <div class="content-apointment-registration">
-        <div class="title-content title-content title-content title-content" style="display: grid; grid-template-columns:repeat(4,1fr);">
+        <div class="title-content-appointment-registration" style="display: grid; grid-template-columns:repeat(4,1fr);">
           <p style="align-self: center; justify-self: center;">Ngày tiêm</p>
           <p style="align-self: center; justify-self: center;">Loại vaccine</p>
           <p style="align-self: center; justify-self: center;">Liều lượng</p>
