--- a/Website/app/templates/staff/home_staff.html
+++ b/Website/app/templates/staff/home_staff.html
@@ -1,2 +1,5 @@
-{% extends 'staff/index.html' %}
-{% load static %}
+{% extends 'customer/index.html' %}
+
+{% block home_staff %}
+
+{% endblock %}
