--- a/Website/app/templates/customer/profile_customer.html
+++ b/Website/app/templates/customer/profile_customer.html
@@ -7,14 +7,18 @@
         <span class="close-updateInf">&times;</span>
       </div>
       <div style="color: black;" class="modal-title-item-updateInf">Cập nhật thông tin</div>
+      <div class="modal-email-item-updateInf">
+        <label style="color: black;" for="address">Email:</label>
+        <input style="width: 157px;" type="text" id="email" name="email" required />
+      </div>
       <div class="modal-address-item-updateInf">
         <label style="color: black;" for="address">Địa chỉ:</label>
-        <input style="width: 175px;" type="text" id="address" name="address" required />
+        <input style="width: 148px;" type="text" id="address" name="address" required />
       </div>
 
       <div class="modal-phone-item-updateInf">
         <label style="color: black;" for="phone">Số điện thoại :</label>
-        <input style="width: 175px;" type="text" id="phone" name="phone" required />
+        <input style="width: 100px;" type="text" id="phone" name="phone" required />
       </div>
 
       <input type="hidden" id="csrfToken-inf" value="{{ csrf_token }}" />
@@ -40,7 +44,7 @@
     </div>
   </div>
   <div style="display: flex; justify-content: center; width: 100%; height: 100vh;">
-    <div class="layout-right" style="width: 50%; height: 80%; display: flex; align-items: center; place-self:center;">
+    <div class="layout-right" style="width: 50%; height: 80%; display: flex; flex-direction:column;align-items: center; place-self:center;">
       {% block content_profile %}
         <div class="container-profile">
           <div class="item-images-profile item-profile">
@@ -87,5 +91,5 @@
     </div>
   </div>
   <script src="{% static 'js/updateInf.js' %}"></script>
-  <script src="{% static 'js/updateImg.js' %}"></script>
+  <script src="{% static 'js/updateImg.js' %}"></script>cv
 {% endblock %}
